--- a/package.json
+++ b/package.json
@@ -86,6 +86,9 @@
       "perMachine": true,
       "include": "electron/installer.nsh"
     },
+    "appx": {
+      "applicationId": "com.decentraland.launcher"
+    },
     "linux": {
       "icon": "public/app-icon.png",
       "target": [
